# PolicyEngineDemo

./: Cargo.toml  IntotoRoot.pl  README.md
DemoData/In-toto/debian/: modify.link
DemoData/Intoto/: build.link  extract.link  fetch.link  modify.link  root.layout
DemoData/Intoto_fake/: extract.link  fetch.link
Example_Output/: IntotoAsserts.pl  IntotoCheck.pl
Example_Output/Intoto/: Intoto.pl  IntotoAsserts.pl  IntotoCheck.pl
Example_Output/Tuf/: TufAsserts.pl  TufCheck.pl  TufRoot.pl  TufSnapshot.pl  TufTarget.pl  TufTimeStamp.pl  tuf.pl
Policy/: Intoto.pl  tuf.pl  validate.policy
Rules/: Intoto.rule  Intoto.schema  Intoto_old.rule  tuf.rule  tuf.schema
docker/: Dockerfile
src/: compiler.rs  intoto.rs  main.rs  tuf.rs
src/types/: intoto_types.rs  mod.rs
