[package]
name = "policyenginedemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
sha256 = "1.1.3"
struct_iterable = "0.1.1"
